--- a/about/research/index.html
+++ b/about/research/index.html
@@ -45,6 +45,27 @@ permalink: /about/research/index.html
                                       <a href="https://eprint.iacr.org/2021/1173" alt="" class="paper-title">Lelantus Spark: Secure and Flexible Private Transactions</a>
                                       <p class="abstract">We propose a modification to the Lelantus private transaction protocol to provide recipient privacy, improved security, and additional usability features. Our decentralized anonymous payment (DAP) construction, Spark, enables non-interactive one-time addressing to hide recipient addresses in transactions. The modified address format permits flexibility in transaction visibility. Address owners can securely provide third parties with opt-in visibility into incoming transactions or all transactions associated to the address; this functionality allows for offloading chain scanning and balance computation without delegating spend authority. It is also possible to delegate expensive proving operations without compromising spend authority when generating transactions. Further, the design is compatible with straightforward linear multisignature operations to allow mutually non-trusting parties to cooperatively receive and generate transactions associated to a multisignature address. We prove that Spark satisfies formal DAP security properties of balance, non-malleability, and ledger indistinguishability.</p>
                                   </div>
+								  <div class="col">
+                                      <a href="https://eprint.iacr.org/2022/288" alt="" class="paper-title">Spats: user-defined confidential assets for the Spark transaction protocol.</a>
+                                      <p class="abstract">In privacy-preserving transaction protocols, confidential asset designs permit transfer of quantities of distinct asset types in a way that obscures their types and values. Spark is a protocol that provides flexible privacy properties relating to addressing, transaction sources and recipients, and value transfer; however, it does not natively support the use of multiple confidential asset types. Here we describe Spats, a new design for confidential assets compatible with Spark that focuses on efficient and modular implementation. It does so by extending coin value commitments to bind and mask an asset type, and asserting in zero knowledge that this type is maintained throughout transactions. We describe the cryptographic components and changes to the Spark protocol necessary for the design of Spats.</p>
+                                  </div>
+								  <div class="col">
+                                      <a href="https://firo.org/blog/assets/helsing-1049371.pdf" alt="" class="paper-title">Helsing: Private Masternode Staking</a>
+                                      <p class="abstract">Helsing is a protocol extension to Spark that allows for private staking operations not requiring transparent addresses or outputs. Specifically, Helsing provides for Spark-compatible collateral staking and coinbase payouts.</p>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+					  <div class="row">
+                          <div class="col">
+                              <h3>{% t tech.audits %}</h3>
+                              <div class="row papers">
+                                  <div class="col">
+                                      <a href="/about/research/papers/Lelantus_Spark_Audit_Report.pdf" alt="" class="paper-title">Lelantus Spark cryptography audit by Hashcloak</a>
+                                  </div>
+                                  <div class="col">
+                                      <a href="/about/research/papers/LinfengSparkAudit.pdf" alt="" class="paper-title">Lelantus cryptography audit by Daniel (Linfeng) Zhao</a>
+                                  </div>
                               </div>
                           </div>
                       </div>
@@ -129,7 +150,7 @@ permalink: /about/research/index.html
                               <div class="row papers">
                                   <div class="col">
                                       <a href="https://eprint.iacr.org/2014/764.pdf" alt="" class="paper-title">One-out-of-Many Proofs: Or How to Leak a Secret and Spend a Coin (Jens Groth et al)</a>
-                                      <p class="abstract">One out of Many Proofs forms the foundation of Sigma which improves on Zerocoin by removing trusted setup and reducing proof sizes. Firo is also applying some further efficiency modifications to the original paper. Sigma is in development and is slated to be released in Q1 2019.</p>
+                                      <p class="abstract">One out of Many Proofs (OOOMPs)forms the foundation of Sigma which improves on Zerocoin by removing trusted setup and reducing proof sizes. Firo is also applying some further efficiency modifications to the original paper. Sigma was replaced by Lelantus but the underlying OOOMPs are still used in Lelantus and Lelantus Spark.</p>
                                   </div>
                               </div>
                           </div>
@@ -164,7 +185,7 @@ permalink: /about/research/index.html
                               <div class="row papers">
                                   <div class="col">
                                       <a href="https://arxiv.org/pdf/1606.03588.pdf" alt="" class="paper-title">MTP: Egalitarian Computing (Alex Biryukov, Dmitry Khovratovich) (revision and improvement funded by Firo)</a>
-                                      <p class="abstract">MTP is the Proof of Work algorithm that Firo uses that promotes egalitarian mining while maintaining quick verification. The original paper had <a href="https://eprint.iacr.org/2017/497.pdf" target="_blank">flaws as identified by Dinur and Nadler</a>. Firo organized a bounty to harden MTP and also funded research to solve these issues as reflected in the linked paper. MTP was coded from the ground up by Firo and switched to the MTP algorithm in December 2018.</p>
+                                      <p class="abstract">MTP is the Proof of Work algorithm that Firo uses that promotes egalitarian mining while maintaining quick verification. The original paper had <a href="https://eprint.iacr.org/2017/497.pdf" target="_blank">flaws as identified by Dinur and Nadler</a>. Firo organized a bounty to harden MTP and also funded research to solve these issues as reflected in the linked paper. MTP was coded from the ground up by Firo and switched to the MTP algorithm in December 2018. MTP has been replaced by FiroPoW which has stronger ASIC resistance and smaller proof sizes.</p>
                                   </div>
                               </div>
                           </div>
