Update Discord links

--- a/about/faq/index.html
+++ b/about/faq/index.html
@@ -198,7 +198,7 @@ permalink: /about/faq/index.html
                             <div class="tab-content">
                               <p>15% of Firo’s block reward goes towards a <a href="https://explorer.firo.org/address/aFrAVZFr8pva5mG8XKaUH8EXcFVVNxLiuB">development fund</a> to fund development work and other efforts in promoting Firo’s adoption.</p>
 							  <p>The fund pays primarily for coders and cryptography researchers, community managers, audits, bug bounties, integration costs and infrastructure overheads.We regularly publish summaries of how these funds are being spent on <a href="https://forum.firo.org">our forums</a>.</p>
-							  <p>We are always actively looking for talent so please do reach out over <a href="mailto:team@firo.org">email</a> or our <a href="https://discordapp.com/invite/4FjnQ2q">Discord</a>.</p>
+							  <p>We are always actively looking for talent so please do reach out over <a href="mailto:team@firo.org">email</a> or our <a href="https://discord.com/invite/TGZPRbRT3Y">Discord</a>.</p>
                             </div>
                           </div>
                           <div class="tab">
@@ -302,7 +302,7 @@ permalink: /about/faq/index.html
                             <input type="checkbox" id="q22">
                             <label class="tab-label" for="q22"><h4>How can I get involved with the Firo community?</h4></label>
                             <div class="tab-content">
-                                <p>We have active communities on our <a href="https://discordapp.com/invite/4FjnQ2q">Discord</a>, <a href="https://t.me/firoorg">Telegram</a> and <a href="https://forum.firo.org">Forums</a>! You can check out all our social links <a href="https://firo.org/community/social/">here.</a></p>
+                                <p>We have active communities on our <a href="https://discord.com/invite/TGZPRbRT3Y">Discord</a>, <a href="https://t.me/firoorg">Telegram</a> and <a href="https://forum.firo.org">Forums</a>! You can check out all our social links <a href="https://firo.org/community/social/">here.</a></p>
                             </div>
                           </div>
                         </div>
@@ -429,7 +429,7 @@ permalink: /about/faq/index.html
                             <input type="checkbox" id="q32">
                             <label class="tab-label" for="q32"><h4>I have a question that is not listed here, please help!</h4></label>
                             <div class="tab-content">
-                                <p>Please drop by our <a href="https://discordapp.com/invite/4FjnQ2q">Discord</a> or <a href="https://t.me/firoorg">Telegram</a> to ask any questions!</p>
+                                <p>Please drop by our <a href="https://discord.com/invite/TGZPRbRT3Y">Discord</a> or <a href="https://t.me/firoorg">Telegram</a> to ask any questions!</p>
                             </div>
                           </div>
                         </div>
