Updates on Buy Firo, Social and Download pages

--- a/community/social/index.html
+++ b/community/social/index.html
@@ -78,9 +78,13 @@ permalink: /community/social/index.html
                         <img src="/img/site-icons/com_qq.svg" alt=""/>
                         <p>QQ</p>
                   </a>
-				  <a href="https://www.instagram.com/firoorg/" target="_blank" class="col">
+			<a href="https://www.instagram.com/firoorg/" target="_blank" class="col">
                         <img src="/img/site-icons/com_instagram.svg" alt=""/>
                         <p>Instagram</p>
+                  </a>
+                  <a href="https://weibo.com/u/6140252510" target="_blank" class="col">
+                        <img src="/img/site-icons/com_weibo.svg" alt=""/>
+                        <p>Weibo</p>
                   </a>
                   <div href="#" target="_blank" class="col extra">
                   </div>
