--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -49,7 +49,10 @@ permalink: /get-firo/buy-firo/index.html
                   </div>
                   <div class="col">
                       <a href="https://indodax.com/market/FIROIDR" target="_blank"><img src="/img/fiat-exchanges/indodax.svg" alt=""/></a>
-                  </div>                
+                  </div> 
+                  <div class="col">
+                    <a href="https://kriptomat.io/cryptocurrency-prices/firo-price/" target="_blank"><img src="/img/fiat-exchanges/kriptomat-logo.svg" alt=""/></a>
+                  </div>               
                   <div class="col">
                       <a href="https://oodlebit.com/Coin/Zcoin" target="_blank"><img src="/img/fiat-exchanges/oodlebit.svg" alt=""/></a>
                   </div>
@@ -58,6 +61,9 @@ permalink: /get-firo/buy-firo/index.html
                   </div>
                   <div class="col">
                       <a href="https://satangcorp.com/exchange/en/trade/XZC_THB" target="_blank"><img src="/img/fiat-exchanges/santang.svg" alt=""/></a>
+                  </div>
+                  <div class="col">
+                    <a href="https://www.sequoir.com/" target="_blank"><img src="/img/fiat-exchanges/sequior.svg" alt=""/></a>
                   </div>
                   <div class="col">
                       <a href="https://sistemkoin.com/" target="_blank"><img src="/img/fiat-exchanges/sistemkoin.svg" alt=""/></a>
@@ -135,6 +141,9 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://www.mxc.com/" target="_blank"><img src="/img/crypto-exchanges/mxc_exchange.svg" alt=""/></a>
                   </div>
                   <div class="col">
+                    <a href="https://tradeogre.com/markets" target="_blank"><img src="/img/crypto-exchanges/tradeogre-logo.png" alt=""/></a>
+                  </div>
+                  <div class="col">
                       <a href="https://txbit.io/Trade/XZC/BTC" target="_blank"><img src="/img/crypto-exchanges/txbit.svg" alt=""/></a>
                   </div>
                   <div class="col">
@@ -181,7 +190,10 @@ permalink: /get-firo/buy-firo/index.html
                   </div>
                   <div class="col">
                     <a href="https://www.localparticl.com/" target="_blank"><img src="/img/coin-swapping/localparticl.svg" alt=""/></a>
-                  </div>                  
+                  </div>  
+                  <div class="col">
+                    <a href="https://www.myconstant.com/crypto-swap" target="_blank"><img src="/img/coin-swapping/myconstant-logo.svg" alt=""/></a>
+                  </div>                 
                   <div class="col">
                       <a href="https://simpleswap.io/" target="_blank"><img src="/img/coin-swapping/simpleswap.svg" alt=""/></a>
                   </div>
@@ -209,3 +221,21 @@ permalink: /get-firo/buy-firo/index.html
               </div>
           </div>
       </section>
+
+      <section class="tech-section ex-list" id="dex">
+        <div class="container">
+          <div class="row">
+              <div class="col head">
+                    <h2>{% t buyfiro.dex %}</h2>
+              </div>
+          </div>
+          <div class="row">
+              <div class="col">
+                  <a href="https://github.com/firoorg/FiroDEX-Desktop/releases/latest" target="_blank"><img src="/img/dex/firodex-logo.png" alt=""/></a>
+              </div>
+              <div class="col">
+                  <a href="https://incognito.org/" target="_blank"><img src="/img/dex/incognito-logo.png" alt=""/></a>
+              </div>
+          </div>
+      </div>
+  </section>
