Added MTP stripping

--- a/about/roadmap/index.html
+++ b/about/roadmap/index.html
@@ -50,6 +50,10 @@ permalink: /about/roadmap/index.html
                               <h3>{% t roadmap.instant %}</h3>
                               <p>{% t roadmap.instantdesc %}</p>
                             </li>
+							<li class="event done">
+                              <h3>{% t roadmap.mtpstrip %}</h3>
+                              <p>{% t roadmap.mtpstripdesc %}</p>
+                            </li>
 						    <li class="event done">
                               <h3>{% t roadmap.firodex %}</h3>
                               <p>{% t roadmap.firodexdesc %}</p>
