update url and remove unlisted

--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -90,10 +90,7 @@ permalink: /get-firo/buy-firo/index.html
               </div>
               <div class="row">
                   <div class="col">
-                      <a href="https://www.aex.com/" target="_blank"><img src="/img/crypto-exchanges/aex.svg" alt=""/></a>
-                  </div>
-                  <div class="col">
-                      <a href="https://atomars.com/" target="_blank"><img src="/img/crypto-exchanges/atomars.svg" alt=""/></a>
+                      <a href="https://www.aex.com/page/trade.html#/?symbol=firo_usdt" target="_blank"><img src="/img/crypto-exchanges/aex.svg" alt=""/></a>
                   </div>
                   <div class="col">
                       <a href="https://www.biki.com/en_US/trade/FIRO_USDT" target="_blank"><img src="/img/crypto-exchanges/biki.svg" alt=""/></a>
@@ -102,70 +99,46 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://accounts.binance.com/en/register?ref=37748947" target="_blank"><img src="/img/crypto-exchanges/binance.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://fmfw.io/" target="_blank"><img src="/img/crypto-exchanges/fmfwio.svg" alt=""/></a>
+                      <a href="https://fmfw.io/firo-to-usdt" target="_blank"><img src="/img/crypto-exchanges/fmfwio.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://www.bitforex.com/en/spot/xzc_btc" target="_blank"><img src="/img/crypto-exchanges/bitforex.svg" alt=""/></a>
+                      <a href="https://global.bittrex.com/Market/Index?MarketName=USDT-FIRO" target="_blank"><img src="/img/crypto-exchanges/bittrex.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://bittrex.com/Market/Index?MarketName=BTC-XZC" target="_blank"><img src="/img/crypto-exchanges/bittrex.svg" alt=""/></a>
+                      <a href="https://www.bkex.com/trade/FIRO_USDT" target="_blank"><img src="/img/crypto-exchanges/bkex.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://www.bkex.com/trade/XZC_USDT" target="_blank"><img src="/img/crypto-exchanges/bkex.svg" alt=""/></a>
+                      <a href="https://www.coinex.com/exchange/firo-usdt" target="_blank"><img src="/img/crypto-exchanges/coinex.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://www.coinex.com/trading?currency=btc&dest=xzc&tab=limit" target="_blank"><img src="/img/crypto-exchanges/coinex.svg" alt=""/></a>
+                      <a href="https://crex24.com/exchange/FIRO-BTC" target="_blank"><img src="/img/crypto-exchanges/crex24.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://crex24.com/exchange/XZC-BTC" target="_blank"><img src="/img/crypto-exchanges/crex24.svg" alt=""/></a>
+                      <a href="https://www.digifinex.com/en-ww/trade/BTC/FIRO" target="_blank"><img src="/img/crypto-exchanges/digifinex.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://www.digifinex.com/" target="_blank"><img src="/img/crypto-exchanges/digifinex.svg" alt=""/></a>
+                      <a href="https://www.finexbox.com/market/pair/FIRO-BTC.html" target="_blank"><img src="/img/crypto-exchanges/finebox.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://fexpro.net/" target="_blank"><img src="/img/crypto-exchanges/fex.svg" alt=""/></a>
+                      <a href="https://www.gate.io/trade/FIRO_USDT" target="_blank"><img src="/img/crypto-exchanges/gateio_h_en.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://www.finexbox.com/" target="_blank"><img src="/img/crypto-exchanges/finebox.svg" alt=""/></a>
+                      <a href="https://hitbtc.com/firo-to-usdt" target="_blank"><img src="/img/crypto-exchanges/hitbtc.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://www.gate.io/" target="_blank"><img src="/img/crypto-exchanges/gateio_h_en.svg" alt=""/></a>
-                  </div>
-                  <div class="col">
-                      <a href="https://hitbtc.com/" target="_blank"><img src="/img/crypto-exchanges/hitbtc.svg" alt=""/></a>
-                  </div>
-                  <div class="col">
-                      <a href="https://www.hotbit.io/" target="_blank"><img src="/img/crypto-exchanges/hotbit.svg" alt=""/></a>
+                      <a href="https://www.hotbit.io/exchange?symbol=FIRO_USDT" target="_blank"><img src="/img/crypto-exchanges/hotbit.svg" alt=""/></a>
                   </div>
                   <div class="col">
                       <a href="https://www.huobi.com/en-us/topic/double-reward/?invite_code=ngj99" target="_blank"><img src="/img/crypto-exchanges/huobi.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://www.livecoin.net/" target="_blank"><img src="/img/crypto-exchanges/livecoin.svg" alt=""/></a>
+                      <a href="https://www.mexc.com/exchange/FIRO_USDT" target="_blank"><img src="/img/crypto-exchanges/mxc_exchange.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://www.mxc.com/" target="_blank"><img src="/img/crypto-exchanges/mxc_exchange.svg" alt=""/></a>
-                  </div>
-                  <div class="col">
-                    <a href="https://tradeogre.com/markets" target="_blank"><img src="/img/crypto-exchanges/tradeogre-logo.png" alt=""/></a>
-                  </div>
-                  <div class="col">
-                      <a href="https://txbit.io/Trade/XZC/BTC" target="_blank"><img src="/img/crypto-exchanges/txbit.svg" alt=""/></a>
-                  </div>
-                  <div class="col">
-                      <a href="https://vcc.exchange/exchange/basic?currency=btc&coin=xzc" target="_blank"><img src="/img/crypto-exchanges/vccexchange.svg" alt=""/></a>
-                  </div>
-                  <div class="col">
-                      <a href="https://vinex.network/market/BTC_XZC" target="_blank"><img src="/img/crypto-exchanges/vinex.svg" alt=""/></a>
+                    <a href="https://tradeogre.com/exchange/BTC-FIRO" target="_blank"><img src="/img/crypto-exchanges/tradeogre-logo.png" alt=""/></a>
                   </div>
                   <div class="col">
                       <a href="https://wazirx.com/exchange/FIRO-USDT" target="_blank"><img src="/img/crypto-exchanges/wazirx.svg" alt=""/></a>
-                  </div>
-                  <div class="col">
-                      <a href="https://www.wbf.info/trade/XZC_USDT" target="_blank"><img src="/img/crypto-exchanges/wbf_exchange.svg" alt=""/></a>
-                  </div>
-                  <div class="col">
-                      <a href="https://www.zg.com/" target="_blank"><img src="/img/crypto-exchanges/zg_exchange.svg" alt=""/></a>
                   </div>
               </div>
           </div>
