Update Social links (#131)
* Update Community links

* Remove IRC

--- a/community/social/index.html
+++ b/community/social/index.html
@@ -54,15 +54,11 @@ permalink: /community/social/index.html
                         <img src="/img/site-icons/com_reddit.svg" alt=""/>
                         <p>Reddit</p>
                   </a>
-                  <a href="https://webchat.freenode.net/" target="_blank" class="col">
-                        <img src="/img/site-icons/com_irc.svg" alt=""/>
-                        <p>IRC: #zcoinproject</p>
-                  </a>
                   <a href="https://bitcointalk.org/index.php?topic=1638450.0" target="_blank" class="col">
                         <img src="/img/site-icons/com_bitcointalk.svg" alt=""/>
                         <p>Bitcointalk</p>
                   </a>
-                  <a href="https://riot.im/app/#/room/#firo:matrix.org" target="_blank" class="col">
+                  <a href="https://matrix.to/#/%23firo:matrix.org" target="_blank" class="col">
                         <img src="/img/site-icons/com_riot.svg" alt=""/>
                         <p>Matrix (Element)</p>
                   </a>
@@ -74,7 +70,7 @@ permalink: /community/social/index.html
                         <img src="/img/site-icons/com_youku.svg" alt=""/>
                         <p>Youku</p>
                   </a>
-                  <a href="https://zcoin.io/qq/" target="_blank" class="col">
+                  <a href="https://jq.qq.com/?_wv=1027&k=JzGzHApT" target="_blank" class="col">
                         <img src="/img/site-icons/com_qq.svg" alt=""/>
                         <p>QQ</p>
                   </a>
