Add Campfire iOS wallet link

--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -211,6 +211,9 @@ permalink: /get-firo/download/index.html
                             <div class="system android camp">
                                 <a href="https://play.google.com/store/apps/details?id=com.cypherstack.campfire" target="_blank">{% t download.downloadmobcamp %}</a>
                             </div>
+                            <div class="system mac camp">
+                                <a href="https://apps.apple.com/us/app/campfire-firo-wallet/id1613267898" target="_blank">{% t download.downloadioscamp %}</a>
+                            </div>
                             <div class="source">
                                 <a href="https://github.com/cypherstack/Campfire/releases" target="_blank"><i class="icon-github"></i></a>
                                 <!--a href="https://sourceforge.net/projects/firoorg/" target="_blank"><i class="icon-sourceforge"></i></a-->
