Fixed incorrect translation tag

--- a/about/research/index.html
+++ b/about/research/index.html
@@ -181,7 +181,7 @@ permalink: /about/research/index.html
                       </div>
                       <div class="row">
                           <div class="col">
-                              <h3>{% t home.academicpapers %}</h3>
+                              <h3>{% t tech.academicpapers %}</h3>
                               <div class="row papers">
                                   <div class="col">
                                       <a href="https://arxiv.org/pdf/1606.03588.pdf" alt="" class="paper-title">MTP: Egalitarian Computing (Alex Biryukov, Dmitry Khovratovich) (revision and improvement funded by Firo)</a>
