--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ permalink: /index.html
               <section id="intro">
           <div class="row">
               <div class="intro-img col">
-                  <img src="/img/firo-ecosystem1.svg"/>
+                  <img src="/img/firo-ecosystem.svg"/>
               </div>
               <div class="intro-info col imgi">
                   <img src="/img/img_firo-mobile-top2.svg"/>
@@ -27,7 +27,7 @@ permalink: /index.html
          <div class="container">
           <div class="row blockchain">
              <div class="col col-img">
-                  <img src="/img/privacy1.svg" alt="Blockchain illustration"/>
+                  <img src="/img/privacy.svg" alt="Blockchain illustration"/>
              </div>
              <div class="col col-info">
                   <h3>{% t home.privacy %}</h3>
@@ -84,7 +84,7 @@ permalink: /index.html
           </div>
           <div class="row blockchain">
              <div class="col col-img">
-                  <img src="/img/privacy-infrastructure1.svg" alt="Privacy Infrastructure illustration"/>
+                  <img src="/img/privacy-infrastructure.svg" alt="Privacy Infrastructure illustration"/>
              </div>
              <div class="col col-info">
                   <h3>{% t home.privacyin %}</h3>
@@ -112,7 +112,7 @@ permalink: /index.html
                   <a class="btn-secondary" href="{{ site.baseurl }}/about/research/">{% t home.cta2 %}</a>
              </div>
              <div class="col col-img">
-                  <img src="/img/rnd1.svg" alt="Blockchain illustration"/>
+                  <img src="/img/rnd.svg" alt="Blockchain illustration"/>
              </div>
           </div>
           </div>
@@ -128,21 +128,21 @@ permalink: /index.html
           </div>
           <div class="row btns">
              <a class="col" href="{{ site.baseurl }}/get-firo/download/">
-                  <img src="/img/wallet1.svg" alt="" />
+                  <img src="/img/wallet.svg" alt="" />
                   <h3>{% t home.getfiro2 %}</h3>
              </a>
              <a class="col" href="{{ site.baseurl }}/get-firo/buy-firo/">
-                  <img src="/img/buy-firo1.svg" alt="" />
+                  <img src="/img/buy-firo.svg" alt="" />
                   <h3>{% t home.getfiro3 %}</h3>
              </a>
              
              <a class="col" href="{{ site.baseurl }}/guide/masternode-setup.html">
-                  <img src="/img/earn-firo1.svg" alt="" />
+                  <img src="/img/earn-firo.svg" alt="" />
                   <h3>{% t home.getfiro4 %}</h3>
              </a>
              
              <a class="col" href="{{ site.baseurl }}/guide/how-to-mine-firo.html">
-                  <img src="/img/mine-firo1.svg" alt="" />
+                  <img src="/img/mine-firo.svg" alt="" />
                   <h3>{% t home.getfiro5 %}</h3>
              </a>
           </div>
