Further reversion of Fido

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ permalink: /index.html
                   </div>
              </div>
              <div class="col col-img">
-                  <img src="/img/blockchain1.svg" alt="Blockchain illustration"/>
+                  <img src="/img/blockchain.svg" alt="Blockchain illustration"/>
              </div>
           </div>
           <div class="row blockchain">
