Add common problems guide to main page

--- a/guide/index.html
+++ b/guide/index.html
@@ -30,6 +30,7 @@ permalink: /guide/index.html
                   <div class="col">
                         <h2>Wallet</h2>
                         <ul class="guides-list">
+                            <li><a href="/guide/common-problems.html">Common wallet problems</a></li>
                             <li><a href="/guide/backing-up-firo-wallet-with-mnemonic-seed-phrase.html">How to backup your Firo wallet with a mnemonic seed phrase</a></li>
                             <li><a href="/guide/reindex-wallet.html">Reindexing your Firo wallet</a></li>
 							<li><a href="/guide/using-ledger-with-firo.html">How to Use Ledger With Firo</a></li>
