--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -63,6 +63,9 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://dovewallet.com/" target="_blank"><img src="/img/fiat-exchanges/dovewallet.svg" alt=""/></a>
                   </div>
                   <div class="col">
+                    <a href="https://fiatom.io/" target="_blank"><img src="/img/fiat-exchanges/fiatom.svg" alt=""/></a>
+                </div>
+                  <div class="col">
                       <a href="https://guardarian.com/" target="_blank"><img src="/img/fiat-exchanges/guardarian.svg" alt=""/></a>
                   </div>
                   <div class="col">
