--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -63,6 +63,9 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://dovewallet.com/" target="_blank"><img src="/img/fiat-exchanges/dovewallet.svg" alt=""/></a>
                   </div>
                   <div class="col">
+                    <a href="https://fiatom.io/" target="_blank"><img src="/img/fiat-exchanges/fiatom.svg" alt=""/></a>
+                </div>
+                  <div class="col">
                       <a href="https://guardarian.com/" target="_blank"><img src="/img/fiat-exchanges/guardarian.svg" alt=""/></a>
                   </div>
                   <div class="col">
@@ -72,7 +75,7 @@ permalink: /get-firo/buy-firo/index.html
                     <a href="https://kriptomat.io/cryptocurrency-prices/firo-price/" target="_blank"><img src="/img/fiat-exchanges/kriptomat-logo.svg" alt=""/></a>
                   </div>               
                   <div class="col">
-                      <a href="https://satangcorp.com/exchange/en/trade/XZC_THB" target="_blank"><img src="/img/fiat-exchanges/santang.svg" alt=""/></a>
+                      <a href="https://satangcorp.com/exchange/en/trade/XZC_THB" target="_blank"><img src="/img/fiat-exchanges/satang.svg" alt=""/></a>
                   </div>
                   <div class="col">
                     <a href="https://www.sequoir.com/" target="_blank"><img src="/img/fiat-exchanges/sequior.svg" alt=""/></a>
