--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -80,7 +80,7 @@ permalink: /get-firo/download/index.html
                             <p class="wversion">2.2.1</p>
                             <p class="changelog"><a href="https://github.com/firoorg/firo-client/releases/latest" target="_blank">{% t download.changelog %}</a></p>
                             <div class="system win">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.2.1/Firo.Client.Setup-2.2.1.exe">{% t download.downloadelectronw %}</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.2.1/Firo.Client.Setup.2.2.1.exe">{% t download.downloadelectronw %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="wh3">
                                     <label class="tab-label" for="wh3">{% t download.hasheswindows %}</label>
