--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -80,6 +80,9 @@ permalink: /get-firo/buy-firo/index.html
                   <div class="col">
                     <a href="https://www.sequoir.com/" target="_blank"><img src="/img/fiat-exchanges/sequior.svg" alt=""/></a>
                   </div>
+                  <div class="col">
+                        <a href="https://sevenb.io/" target="_blank"><img src="/img/fiat-exchanges/7b_logo.svg" alt=""/></a>
+                  </div>
               </div>
           </div>
       </section>
