--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -408,8 +408,8 @@ permalink: /get-firo/download/index.html
                                  </li>
                               </ul>
                           </div>
-						  <div class="col">
-							  <img src="/img/mobile-wallets/dove-wallet-icon.svg" alt="" />
+			<div class="col">
+			      <img src="/img/mobile-wallets/dove-wallet-icon.svg" alt="" />
                               <h4>Dove Wallet</h4>
                               <ul class="row">
                                  <li class="col">
@@ -418,7 +418,28 @@ permalink: /get-firo/download/index.html
                                     </a>
                                  </li>
                               </ul>
-                          </div>
+                        </div>
+		       	<div class="col">
+			      <img src="/img/mobile-wallets/hebewallet.png" alt="HebeWallet" />
+                              <h4>Hebe Wallet</h4>
+                              <ul class="row">
+                                 <li class="col">
+                                    <a href="https://play.google.com/store/apps/details?id=com.hebeblock.hebewallet" target="_blank">
+                                         <i class="icon-android"></i>
+                                    </a>
+                                 </li>
+                                  <li class="col">
+                                     <a href="https://itunes.apple.com/us/app/hebe-wallet/id1453374447" target="_blank">
+                                          <i class="icon-apple"></i>
+                                      </a>
+                                 </li>
+				 <li class="col">
+                                    <a href="https://hebe.cc/firo/firo.html" target="_blank">
+                                         <i class="icon-web"></i>
+                                    </a>
+                                 </li>     
+                              </ul>
+                        </div>
               </div>
           </div>
       </section>
