Electron link correction

--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -80,7 +80,7 @@ permalink: /get-firo/download/index.html
                             <p class="wversion">2.2.2</p>
                             <p class="changelog"><a href="https://github.com/firoorg/firo-client/releases/latest" target="_blank">{% t download.changelog %}</a></p>
                             <div class="system win">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.2.2/Firo.Client.Setup.2.2.2.exe">{% t download.downloadelectronw %}</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.2.2/Firo-ClientSetup-2.2.2.exe">{% t download.downloadelectronw %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="wh3">
                                     <label class="tab-label" for="wh3">{% t download.hasheswindows %}</label>
@@ -90,7 +90,7 @@ permalink: /get-firo/download/index.html
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.2.2/Firo.Client-2.2.2.dmg">{% t download.downloadelectronm %}</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.2.2/Firo-Client-2.2.2.dmg">{% t download.downloadelectronm %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh2">
                                     <label class="tab-label" for="mh2">{% t download.hashesmac %}</label>
@@ -100,7 +100,7 @@ permalink: /get-firo/download/index.html
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.2.2/Firo.Client-2.2.2.AppImage">{% t download.downloadelectronl %}</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/v2.2.2/Firo-Client-2.2.2.AppImage">{% t download.downloadelectronl %}</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh2">
                                     <label class="tab-label" for="lh2">{% t download.hasheslinux %}</label>
