Added Stack Wallet to Downloads page

--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -196,11 +196,18 @@ permalink: /get-firo/download/index.html
                     </div>
                     
                     <div class="col">
-                        <p class="tagline">{% t download.optionmob2 %}</p>
+                        <p class="tagline">{% t download.optionmob3 %}</p>
                         <div class="inner">
-                            <h3>{% t download.iosmob %}</h3>
-                            <p class="wversion">Coming soon</p>
-                            <!--p class="changelog"><a href="https://github.com/firoorg/mobile/releases/latest" target="_blank">{% t download.changelog %}</a></p-->
+                            <h3>{% t download.stackwalletmob %}</h3>
+                            <div class="system android camp">
+                                <a href="https://play.google.com/store/apps/details?id=com.cypherstack.stackwallet" target="_blank">{% t download.downloadmobcamp %}</a>
+                            </div>
+                            <div class="system mac camp">
+                                <a href="https://apps.apple.com/us/app/stack-wallet-by-cypher-stack/id1634811534" target="_blank">{% t download.downloadioscamp %}</a>
+                            </div>
+                            <div class="source">
+                                <a href="https://github.com/cypherstack/stack_wallet/" target="_blank"><i class="icon-github"></i></a>
+                            </div>
                         </div>
                     </div>
                     
