add now wallets to download page

--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -240,6 +240,22 @@ permalink: /get-firo/download/index.html
                   </div>
               </div>
               <div class="row mob-wallets">
+		      <div class="col">
+                              <img src="/img/mobile-wallets/now-wallet-logo.png" alt="" />
+                              <h4>Edge Wallet</h4>
+                              <ul class="row">
+                                 <li class="col">
+                                    <a href="https://play.google.com/store/apps/details?id=com.nowwallet" target="_blank">
+                                         <i class="icon-android"></i>
+                                    </a>
+                                 </li>
+                                  <li class="col">
+                                     <a href="https://apps.apple.com/app/now-wallet-bitcoin-crypto/id1591216386" target="_blank">
+                                          <i class="icon-apple"></i>
+                                      </a>
+                                 </li>
+                              </ul>
+                          </div>
                           <div class="col">
                               <img src="/img/mobile-wallets/zelcore.png" alt="" />
                               <h4>ZelCore Wallet</h4>
