--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -242,7 +242,7 @@ permalink: /get-firo/download/index.html
               <div class="row mob-wallets">
 		      <div class="col">
                               <img src="/img/mobile-wallets/now-wallet-logo.png" alt="" />
-                              <h4>Edge Wallet</h4>
+                              <h4>NOW Wallet</h4>
                               <ul class="row">
                                  <li class="col">
                                     <a href="https://play.google.com/store/apps/details?id=com.nowwallet" target="_blank">
