--- a/community/merchants/index.html
+++ b/community/merchants/index.html
@@ -95,7 +95,8 @@ permalink: /community/merchants/index.html
                       <label class="acc-label" for="chck4">{% t merchants.button4 %}</label>
                       <div class="accordion-content col" id="btn4-content">
                                 <div class="row">
-                                    <div class="col"><a href="" target="_blank"><img src="/img/merchants/logos/cryptotask-logo.png" alt=""/></a></div>    
+                                    <div class="col"><a href="https://www.cryptotask.org/en" target="_blank"><img src="/img/merchants/logos/cryptotask-logo.png" alt=""/></a></div>
+                                    <div class="col"><a href="https://hyve.works/" target="_blank"><img src="/img/merchants/logos/hyve-logo.png" alt=""/></a></div>   
                                 </div>
                           </div>
                       </div>
